# Barnes-Hut-simulation

./: CMakeLists.txt  README.md
include/: aligned-allacator.hpp  force-calculator.hpp  particle-system.hpp  particle.hpp  physics-engine.hpp  quad-tree.hpp  sse-utils.hpp  utils.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  force-calculator.cpp  main.cpp  particle-system.cpp  particle.cpp  physics-engine.cpp  quad-tree.cpp
